force-app/main/default/objects/Applicant__c/Applicant__c.object-meta.xml
<CustomObject>
    <description>This is a junction object to support a many to many relationship between a person account and an application.</description>
    <label>Applicant</label>
    <nameField>
        <displayFormat>Applicant - {0000}</displayFormat>
        <label>Applicant ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applicants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>