force-app/main/default/objects/Applicant__c/fields/IndividualApplication__c.field-meta.xml
<CustomField>
    <fullName>IndividualApplication__c</fullName>
    <label>Individual Application</label>
    <referenceTo>IndividualApplication</referenceTo>
    <relationshipLabel>Applicants</relationshipLabel>
    <relationshipName>Applicants</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>