force-app/main/default/objects/Applicant__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <formula>IF(Account__r.PersonContact.MobilePhone!=Null,
Account__r.PersonContact.MobilePhone,
IF(Account__r.PersonContact.HomePhone!=Null,
Account__r.PersonContact.HomePhone,
IF(Account__r.PersonContact.Phone!=Null,
Account__r.PersonContact.Phone,
NULL)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone</label>
    <type>Text</type>
</CustomField>